<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout

        android:id="@+id/ll_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_badge"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_weight="3"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/home_badge"
            android:src="@drawable/logoinggris"/>

        <Button
            android:id="@+id/btn_favorit"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="Favorit"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <ImageView
                android:id="@+id/img_home"
                android:layout_width="115dp"
                android:layout_height="115dp"
                android:layout_weight="3"
                android:contentDescription="@string/home_badge"
                android:maxHeight="115dp"
                android:maxWidth="115dp" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:textSize="35sp"
                android:textStyle="bold"
                android:text="@string/vs" />

            <ImageView
                android:id="@+id/img_away"
                android:layout_width="115dp"
                android:layout_height="115dp"
                android:layout_weight="3"
                android:contentDescription="@string/away_badge"
                android:maxHeight="115dp"
                android:maxWidth="115dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp">

            <TextView
                android:id="@+id/home_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="14dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginRight="14dp" />

            <TextView
                android:id="@+id/away_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginLeft="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp">

            <TextView
                android:id="@+id/home_score_match"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/away_score_match"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#616161" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/jadwal"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_match_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/venue"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_tmpt_venue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/jam"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_kick_off"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/status"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center" />

        </LinearLayout>




    </LinearLayout>
</ScrollView>